change gc pause mills and core pool size